# kospel-cmi-lib

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  read_cwu_regs.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: release-pypi.yml  test-pr.yml
docs/: README.md  architecture.md  development.md  register_mapping_from_ui.md  status.md  technical.md
src/kospel_cmi/: __init__.py  exceptions.py
src/kospel_cmi/configs/: README.md  kospel_cmi_standard.yaml
src/kospel_cmi/controller/: README.md  __init__.py  api.py  device.py  registry.py
src/kospel_cmi/data/: simulation_state.yaml
src/kospel_cmi/kospel/: README.md  __init__.py  api.py  backend.py  discovery.py  simulator.py
src/kospel_cmi/registers/: README.md  __init__.py  decoders.py  encoders.py  enums.py  registry.py  utils.py
src/kospel_cmi/tools/: README.md  __init__.py  cli_common.py  discover.py  live_scanner.py  register_scanner.py
tests/: conftest.py
tests/fixtures/configs/: bad_map.yaml
tests/unit/controller/: test_config_loader.py  test_device.py  test_heater_controller.py  test_registry.py
tests/unit/kospel/: __init__.py  test_api.py  test_backend.py  test_discovery.py  test_simulator.py
tests/unit/registers/: test_decoders.py  test_encoders.py  test_utils.py
tests/unit/tools/: fixtures.py  test_cli_common.py  test_discover.py  test_live_scanner.py  test_register_scanner.py
